# my_de

./: .gitignore  Cargo.toml  README.md  de-config.json  run-de.sh
de-compositor/: Cargo.toml
de-compositor/src/: ipc.rs  main.rs  state.rs  winit.rs
de-compositor/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
de-ipc/: Cargo.toml
de-ipc/src/: lib.rs
de-manager/: Cargo.toml
de-manager/src/: main.rs
de-panel/: Cargo.toml
de-panel/src/: main.rs
de-sdk/: Cargo.toml
de-sdk/src/: lib.rs
modules/mod-clock/: Cargo.toml
modules/mod-clock/src/: main.rs
modules/mod-sysinfo/: Cargo.toml
modules/mod-sysinfo/src/: main.rs
modules/mod-volume/: Cargo.toml
modules/mod-volume/src/: main.rs
