[package]
name = "de-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Наш локальный IPC-крейт из Workspace
de-ipc = { path = "../de-ipc" }

# Основной фреймворк для написания композитора
smithay = { version = "0.7.0", features = [
    "backend_winit", 
    "backend_udev", 
    "renderer_gl",      
    "desktop", 
    "input", 
    "wayland_frontend"  
] }

# Сериализация для обработки IPC сообщений
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# Вспомогательные контейнеры
wayland-server = "0.31"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }