[package]
name = "de-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
de-ipc = { path = "../de-ipc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Современный графический стек
gtk4 = "0.8"
gtk4-layer-shell = "0.3.0"
async-channel = "2.3" # <-- Новый стандартный канал для GTK4