[package]
name = "de-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
de-ipc = { path = "../de-ipc" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"